tooling/nargo_cli/tests/snapshots/execute__tests__regression_6734_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "15635097111164446465",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VW4U6DMBC+QnFjZNHoE/gCCgKDHyYa9UUqC8/Bo7vGXnr5rMsy2ktIgbt9993XL3SKfCi3aloRDPLh1tKtmcjnp+vdPdfroimhb0z8se66MjBfRP5t6TBVGvya8RPpX28cztfi8eUs3Hd7uipxvyfvj1Tz8/6lnP/hzMzsnc/F5yhe76ZyWj47vD1wIeBFkMsD75j7jpL6slGgFfNR//BJvY+Mr9Pg97w3Bf0Nzt2I3gpyG5GTGmDk8Cxnsl7pBS7WIR/pD+Z2G+DAv02sYc29WENN3jM6oE8G9ah/Ae8ehU6vMF/Ip/Id39/R+e8B8omozwF9JCPkoxxyW5iZ6HKP8UwW403gYh3ykT5ibgXkntya+qy8B56yV0X+e66X+P2H8dffNvLF64Bay/4F1HfueReYQ6/gOQ+mmVszm94cj91kUCcbmdApdCbJOdaeSbImxZmkgQ/yz2A29CPrEHsfzNCO00s3Dd99a9rDVfsga/l/ia39AetjzVsJDAAA",
  "debug_symbols": "ldXRCoMgFAbgd/G6C/Wk1V5ljGFlQxALq8GI3n06dhExGP9NeKKPA/3Cv7Hetuvj7sIwzuxy3ZgfO7O4MaRp2wvWRue9e9yPrxnPD1F/vp8nE/I4LyYu7KI0L5gNfTrVKvnBeZvOfL8VTDSokBwWAhYSFgSLEhYKFhoWFSzgzCWcOcGZE5w5wZkTnDnBmdPfzJuz0LCoYFHDokFFyWEhYCFhQbAoYQFnrn7uIC2+gnR9FgoWGhYVJvY0PU10pvX2WzXDGrpD8yyvyZ5KaIpjZ/s12lxHhybKt6esCiVzyeSLkX6flmlH2vMG",
  "file_map": {
    "50": {
      "source": "// https://github.com/noir-lang/noir/issues/6734\n\npub fn sub_array_extended<let SRC_LEN: u32, let DST_LEN: u32>(\n    src: [Field; SRC_LEN],\n    offset: u32,\n) -> [Field; DST_LEN] {\n    let available_elements_to_copy = SRC_LEN - offset;\n    let elements_to_copy = if DST_LEN > available_elements_to_copy {\n        available_elements_to_copy\n    } else {\n        DST_LEN\n    };\n\n    let mut dst: [Field; DST_LEN] = std::mem::zeroed();\n    for i in 0..elements_to_copy {\n        dst[i] = src[i + offset];\n    }\n\n    dst\n}\n\nunconstrained fn main() {\n    assert_eq(sub_array_extended([], 0), []);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
